@@ -1,3 +1,8 @@
+TAG: nomenload-6-0-11-1
+DATE: 01/04/2018
+STAFF: sc
+CHANGES: TR12599 - add dos2unix to convert input file
+
 TAG: nomenload-6-0-11-5
 DATE: 12/04/2017
 STAFF: lec
